fix layout bug - gap between inputs

--- a/bikespace_frontend/src/components/dashboard/filter-date-range-custom/filter-date-range-custom.module.scss
+++ b/bikespace_frontend/src/components/dashboard/filter-date-range-custom/filter-date-range-custom.module.scss
@@ -1,6 +1,10 @@
 @import '@/styles/variables';
 
 .dateRangeCustom {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+
   .dateInput {
     display: grid;
     grid-template-columns: 30% 70%;
@@ -18,6 +22,7 @@
   }
 
   button {
+    align-self: flex-start;
     display: flex;
     align-items: center;
     justify-content: center;
